--- a/admin/pyproject.toml
+++ b/admin/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.12"
 dependencies = [
     "flask (>=3.1.2,<4.0.0)",
     "psycopg2-binary (>=2.9.10,<3.0.0)",
-    "flask-sqlalchemy-lite (>=0.1.0,<0.2.0)"
+    "flask-sqlalchemy-lite (>=0.1.0,<0.2.0)",
+    "bcrypt (>=4.2.0,<5.0.0)"
 ]
 
 [tool.poetry]
