--- a/admin/pyproject.toml
+++ b/admin/pyproject.toml
@@ -8,10 +8,7 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "flask (>=3.1.2,<4.0.0)",
-    "psycopg2-binary (>=2.9.10,<3.0.0)",
-    "flask-sqlalchemy-lite (>=0.1.0,<0.2.0)",
-    "bcrypt (>=4.2.0,<5.0.0)"
+    "flask (>=3.1.2,<4.0.0)"
 ]
 
 [tool.poetry]
@@ -20,10 +17,6 @@ packages = [{include = "web", from = "src"}]
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.4.2"
-
-
-[tool.poetry.group.dev.dependencies]
-black = "^25.1.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
