--- a/admin/pyproject.toml
+++ b/admin/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "flask-sqlalchemy-lite (>=0.1.0,<0.2.0)",
     "bcrypt (>=4.2.0,<5.0.0)",
     "geoalchemy2 (>=0.18.0,<0.19.0)",
-    "shapely (>=2.1.2,<3.0.0)"
+    "shapely (>=2.1.2,<3.0.0)",
     "flask-session (>=0.8.0,<0.9.0)"
 ]
 
