--- a/admin/pyproject.toml
+++ b/admin/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "bcrypt (>=4.2.0,<5.0.0)",
     "geoalchemy2 (>=0.18.0,<0.19.0)",
     "shapely (>=2.1.2,<3.0.0)",
-    "flask-session (>=0.8.0,<0.9.0)"
+    "flask-session (>=0.8.0,<0.9.0)",
+    "minio (>=7.2.18,<8.0.0)"
 ]
 
 [tool.poetry]
