--- a/admin/pyproject.toml
+++ b/admin/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Basaj Nicolas",email = "nicobas2004@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<4.0"
 dependencies = [
     "flask (>=3.1.2,<4.0.0)",
     "psycopg2-binary (>=2.9.10,<3.0.0)",
@@ -15,7 +15,9 @@ dependencies = [
     "geoalchemy2 (>=0.18.0,<0.19.0)",
     "shapely (>=2.1.2,<3.0.0)",
     "flask-session (>=0.8.0,<0.9.0)",
-    "minio (>=7.2.18,<8.0.0)"
+    "minio (>=7.2.18,<8.0.0)",
+    "marshmallow (>=4.1.0,<5.0.0)",
+    "flask-cors (>=6.0.1,<7.0.0)"
 ]
 
 [tool.poetry]
