--- a/portal/package.json
+++ b/portal/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "vue": "^3.5.22",
     "leaflet": "^1.9.4",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "pinia": "^2.1.7",
+    "axios": "^1.7.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
