--- a/admin/pyproject.toml
+++ b/admin/pyproject.toml
@@ -21,6 +21,7 @@ minio = ">=7.2.18,<8.0.0"
 marshmallow = ">=4.1.0,<5.0.0"
 flask-cors = ">=6.0.1,<7.0.0"
 authlib = ">=1.3.0,<2.0.0"
+flask-jwt-extended = ">=4.7.1,<5.0.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.4.2"
